FIX: Se arregla número adicional en letalidad_5 y se colocan a dos decimales los flotantes que se imprimen

--- a/test_ciss/index.html
+++ b/test_ciss/index.html
@@ -288,7 +288,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
                                         <h1>Plataforma COVID-19 | CISS</h1>
-                                        <h4><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports" target="_blank" class="nav-link" class="nav-link">Datos COVID-19: OMS,</a> última actualización: 24-04-20.</h4>
+                                        <h4><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports" target="_blank" class="nav-link" class="nav-link">Datos COVID-19: OMS,</a> última actualización: 2020-04-24</h4>
 
                                         <h5><b>Fuentes de datos de contexto:</b><a href="https://data.worldbank.org/" target="_blank" class="nav-link" target="_blank" class="nav-link"> Banco Mundial,</a><a href="https://www.who.int/data/gho" target="_blank" class="nav-link" target="_blank" class="nav-link"> OMS,</a><a href="https://ilostat.ilo.org/data/" target="_blank" class="nav-link" target="_blank" class="nav-link"> OIT,</a><a href="https://population.un.org/wpp/Download/Standard/Population/" target="_blank" class="nav-link" target="_blank" class="nav-link"> WPP-UN,</a><a href="https://ophi.org.uk/multidimensional-poverty-index/global-mpi-2019/" target="_blank" class="nav-link" target="_blank" class="nav-link"> OPHI. </a>La base de datos y la tabla de descriptores de los indicadores puede consultarse<a href="https://docs.google.com/spreadsheets/d/12LuHtnArAG4VHZp2KGEyy29bvgKyRAmAzm8z2V0y8nY/edit?usp=sharing" target="_blank" class="nav-link"> aquí.</a></h5>
                                     </div>
@@ -437,7 +437,7 @@
                                 <li>Nicaragua<span id="mas_letalidad_2" class="pull-right"><b>20.0</b></span></li>
                                 <li>Sint Maarten<span id="mas_letalidad_3" class="pull-right"><b>16.438</b></span></li>
                                 <li>Zimbabwe<span id="mas_letalidad_4" class="pull-right"><b>14.286</b></span></li>
-                                <li>Mauritania<span id="mas_letalidad_5" class="pull-right"><b>14.286</b>14.3</span></li>
+                                <li>Mauritania<span id="mas_letalidad_5" class="pull-right"><b>14.286</b></span></li>
                                 <li>Argelia<span id="mas_letalidad_6" class="pull-right"><b>13.535</b></span></li>
                                 <li>Bahamas<span id="mas_letalidad_7" class="pull-right"><b>12.857</b></span></li>
                             </ul>
