TEST: Se actualiza resultado del ultimo test a html de prueba

--- a/test_ciss/index.html
+++ b/test_ciss/index.html
@@ -288,7 +288,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
                                         <h1>Plataforma COVID-19 | CISS</h1>
-                                        <h4><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports" target="_blank" class="nav-link" class="nav-link">Datos COVID-19: OMS,</a> última actualización: 2020-04-24</h4>
+                                        <h4><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports" target="_blank" class="nav-link" class="nav-link">Datos COVID-19: OMS,</a> última actualización: 2020-04-26</h4>
 
                                         <h5><b>Fuentes de datos de contexto:</b><a href="https://data.worldbank.org/" target="_blank" class="nav-link" target="_blank" class="nav-link"> Banco Mundial,</a><a href="https://www.who.int/data/gho" target="_blank" class="nav-link" target="_blank" class="nav-link"> OMS,</a><a href="https://ilostat.ilo.org/data/" target="_blank" class="nav-link" target="_blank" class="nav-link"> OIT,</a><a href="https://population.un.org/wpp/Download/Standard/Population/" target="_blank" class="nav-link" target="_blank" class="nav-link"> WPP-UN,</a><a href="https://ophi.org.uk/multidimensional-poverty-index/global-mpi-2019/" target="_blank" class="nav-link" target="_blank" class="nav-link"> OPHI. </a>La base de datos y la tabla de descriptores de los indicadores puede consultarse<a href="https://docs.google.com/spreadsheets/d/12LuHtnArAG4VHZp2KGEyy29bvgKyRAmAzm8z2V0y8nY/edit?usp=sharing" target="_blank" class="nav-link"> aquí.</a></h5>
                                     </div>
@@ -307,7 +307,7 @@
                             <div class="analytics-content">
                                 <h5 style="content: center">Total de casos confirmados en el mundo</h5>
                                 <br>
-                                <h2><span id="total_confirmados_mundo" class="counter">2,626,321</span></h2>
+                                <h2><span id="total_confirmados_mundo" class="counter">2,804,796</span></h2>
                             </div>
                         </div>
                     </div>
@@ -317,7 +317,7 @@
                                 <span class="tuition-fees"></span>
                                 <h5>Total de nuevos confirmados en el mundo</h5>
                                 <br>
-                                <h2><span id="total_nuevos_confirmados_mundo" class="counter">81,529</span></h2>
+                                <h2><span id="total_nuevos_confirmados_mundo" class="counter">84,900</span></h2>
                             </div>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                                 <span class="tuition-fees"></span>
                                 <h5 style="margin: 0 0 27px;">Total de muertes en el mundo</h5>
                                 <br>
-                                <h2><span id="total_muertes_mundo" class="counter">181,938</span></h2>
+                                <h2><span id="total_muertes_mundo" class="counter">193,722</span></h2>
                             </div>
                         </div>
                     </div>
@@ -337,7 +337,7 @@
                                 <span class="tuition-fees"></span>
                                 <h5>Total de nuevas muertes en el mundo</h5>
                                 <br>
-                                <h2><span id="total_nuevas_muertes_mundo" class="counter">6,260</span></h2>
+                                <h2><span id="total_nuevas_muertes_mundo" class="counter">6,018</span></h2>
                             </div>
                         </div>
                     </div>
@@ -345,7 +345,7 @@
                         <div class="analytics-sparkle-line reso-mg-b-30" style="border-top: #F5A506 5px solid">
                             <div class="analytics-content">
                                 <h5 style="padding-bottom:3.4px">Tasa de mortalidad en el mundo (por cada 100 mil hab.)</h5>
-                                <h2><span id="total_mortalidad_mundo" class="counter">2.339</span></h2>
+                                <h2><span id="total_mortalidad_mundo" class="counter">2.49</span></h2>
                             </div>
                         </div>
                     </div>
@@ -354,7 +354,7 @@
                         <div class="analytics-sparkle-line reso-mg-b-30" style="border-top: #F6E025 5px solid">
                             <div class="analytics-content">
                                 <h5 style="padding-bottom:3px">Tasa de letalidad en el mundo (por cada 100 casos)</h5>
-                                <h2><span id="total_letalidad_mundo" class="counter">6.927</span>
+                                <h2><span id="total_letalidad_mundo" class="counter">6.91</span>
                             </div>
                         </div>
                     </div>
@@ -404,13 +404,13 @@
                         <div class="white-box" class="analytics-sparkle-line reso-mg-b-30" style="border-top: #29bbf1 5px solid">
                            <h3 class="box-title">Países con más casos confirmados</h3>
                             <ul class="basic-list">
-                                <li>Estados Unidos<span id="mas_confirmados_1" class="pull-right"><b>830,053</b></span></li>
-                                <li>Bolivia<span id="mas_confirmados_2" class="pull-right"><b>87,026</b></span></li>
-                                <li>Brasil<span id="mas_confirmados_3" class="pull-right"><b>45,757</b></span></li>
-                                <li>Canadá<span id="mas_confirmados_4" class="pull-right"><b>40,813</b></span></li>
-                                <li>Suiza<span id="mas_confirmados_5" class="pull-right"><b>28,414</b></span></li>
-                                <li>India<span id="mas_confirmados_6" class="pull-right"><b>23,077</b></span></li>
-                                <li>Portugal<span id="mas_confirmados_7" class="pull-right"><b>22,353</b></span></li>
+                                <li>Estados Unidos<span id="mas_confirmados_1" class="pull-right"><b>899,281</b></span></li>
+                                <li>España<span id="mas_confirmados_2" class="pull-right"><b>219,764</b></span></li>
+                                <li>Alemania<span id="mas_confirmados_3" class="pull-right"><b>154,175</b></span></li>
+                                <li>Reino Unido<span id="mas_confirmados_4" class="pull-right"><b>148,381</b></span></li>
+                                <li>Francia<span id="mas_confirmados_5" class="pull-right"><b>122,875</b></span></li>
+                                <li>Irán<span id="mas_confirmados_6" class="pull-right"><b>89,328</b></span></li>
+                                <li>China<span id="mas_confirmados_7" class="pull-right"><b>84,338</b></span></li>
                             </ul>
                         </div>
                     </div>
@@ -419,13 +419,13 @@
                             <h3 class="box-title">Países con más muertes</h3>
                             <ul class="basic-list">
                                 <br>
-                                <li>Estados Unidos<span id="mas_muertes_1" class="pull-right"><b>42,311</b></span></li>
-                                <li>Bolivia<span id="mas_muertes_2" class="pull-right"><b>5,481</b></span></li>
-                                <li>Brasil<span id="mas_muertes_3" class="pull-right"><b>2,906</b></span></li>
-                                <li>Canadá<span id="mas_muertes_4" class="pull-right"><b>2,028</b></span></li>
-                                <li>Suecia<span id="mas_muertes_5" class="pull-right"><b>2,021</b></span></li>
-                                <li>Suiza<span id="mas_muertes_6" class="pull-right"><b>1,267</b></span></li>
-                                <li>México<span id="mas_muertes_7" class="pull-right"><b>970</b></span></li>
+                                <li>Estados Unidos<span id="mas_muertes_1" class="pull-right"><b>46,204</b></span></li>
+                                <li>Francia<span id="mas_muertes_2" class="pull-right"><b>22,580</b></span></li>
+                                <li>España<span id="mas_muertes_3" class="pull-right"><b>22,524</b></span></li>
+                                <li>Reino Unido<span id="mas_muertes_4" class="pull-right"><b>20,319</b></span></li>
+                                <li>Bélgica<span id="mas_muertes_5" class="pull-right"><b>6,917</b></span></li>
+                                <li>Irán<span id="mas_muertes_6" class="pull-right"><b>5,650</b></span></li>
+                                <li>Alemania<span id="mas_muertes_7" class="pull-right"><b>5,640</b></span></li>
                             </ul>
                         </div>
                     </div>
@@ -433,13 +433,13 @@
                         <div class="white-box" class="analytics-sparkle-line reso-mg-b-30" style="border-top: #f6e026 5px solid">
                             <h3 class="box-title">Países con mayor tasa de letalidad</h3>
                             <ul class="basic-list">
-                                <li>Fiji<span id="mas_letalidad_1" class="pull-right"><b>27.778</b></span></li>
-                                <li>Nicaragua<span id="mas_letalidad_2" class="pull-right"><b>20.0</b></span></li>
-                                <li>Sint Maarten<span id="mas_letalidad_3" class="pull-right"><b>16.438</b></span></li>
-                                <li>Zimbabwe<span id="mas_letalidad_4" class="pull-right"><b>14.286</b></span></li>
-                                <li>Mauritania<span id="mas_letalidad_5" class="pull-right"><b>14.286</b></span></li>
-                                <li>Argelia<span id="mas_letalidad_6" class="pull-right"><b>13.535</b></span></li>
-                                <li>Bahamas<span id="mas_letalidad_7" class="pull-right"><b>12.857</b></span></li>
+                                <li>Nicaragua<span id="mas_letalidad_1" class="pull-right"><b>27.27</b></span></li>
+                                <li>Francia<span id="mas_letalidad_2" class="pull-right"><b>18.38</b></span></li>
+                                <li>Sint Maarten<span id="mas_letalidad_3" class="pull-right"><b>16.44</b></span></li>
+                                <li>Bahamas<span id="mas_letalidad_4" class="pull-right"><b>15.28</b></span></li>
+                                <li>Bélgica<span id="mas_letalidad_5" class="pull-right"><b>15.26</b></span></li>
+                                <li>Islas Marianas Del Norte (Eeuu)<span id="mas_letalidad_6" class="pull-right"><b>14.29</b></span></li>
+                                <li>Mauritania<span id="mas_letalidad_7" class="pull-right"><b>14.29</b></span></li>
                             </ul>
                         </div>
                     </div>
